# xucg

./: Makefile.am  README.md  configure.m4
algo/: Makefile.am  configure.m4
algo/tree/: binomial_tree.c  knomial_tree.c  tree.h
api/: ucg.h  ucg_def.h  ucg_dt.h  ucg_rte_mpi.h
base/: ucg_component.h  ucg_context.c  ucg_group.c  ucg_group.h  ucg_plan.c  ucg_plan.h  ucg_plan_derived.h  ucg_plan_inner.h  ucg_topology.h
builtin/: Makefile.am  builtin.c
core/: Makefile.am  configure.m4  ucg_channel.h  ucg_config.c  ucg_config.h  ucg_context.c  ucg_context.h  ucg_datatype.c  ucg_datatype.h  ucg_group.c  ucg_group.h  ucg_ppool.c  ucg_ppool.h  ucg_ppool_impl.h  ucg_request.c  ucg_request.h  ucg_rte.c  ucg_rte.h  ucg_topology.h  ucg_util.h  ucg_version.c
docs/: design.md  draft.md  topology.md
docs/images/: Untitled Diagram.drawio  ucg.drawio  ucg.eddx
plan/: Makefile.am  api.h  configure.m4  ucg_ppool.c  ucg_ppool.h  ucg_ppool_impl.h
plan/base/: action.c  action.h  plan.c  plan.h
plan/bcast/: bcast_tree.c  btree_bcast.c  tree_bcast.c
plans/: ucg_plan.c  ucg_plan.h  ucg_plan_base.h  ucg_plan_impl.h  ucg_ppool.c  ucg_ppool.h
plans/base/: action.c  action.h  plan.c  plan.h  ucg_plan_base.c  ucg_plan_base.h  ucg_plan_impl.h
plans/ktree/: bcast.c  ktree.h
plans/recursive_doubling/: rd.h
plans/tree/: binomial_tree.c  binomial_tree.h  btree_bcast.c  ktree_bcast.c  tree_bcast.c
plans/tree/algo/: binomial_tree.h  knomial_tree.c  knomial_tree.h  tree.h
plans/tree/base/: tree_plan.c
