#
# Copyright (c) Huawei Technologies Co., Ltd. 2019.  ALL RIGHTS RESERVED.
# See file LICENSE for terms.
#

tree = tree/tree.h \
	   tree/binomial_tree.c \
	   tree/knomial_tree.c 

sources = $(tree) 

noinst_LTLIBRARIES      = libucg_algo.la
libucg_algo_la_SOURCES  = $(sources)
libucg_algo_la_CFLAGS   = $(BASE_CFLAGS)
libucg_algo_la_CPPFLAGS = $(BASE_CPPFLAGS)