#
# Copyright (c) Huawei Technologies Co., Ltd. 2019.  ALL RIGHTS RESERVED.
# See file LICENSE for terms.
#

sources = ucg_version.c \
          ucg_channel.h \
          ucg_channel.c \
          ucg_context.h \
          ucg_context.c \
          ucg_datatype.h \
          ucg_datatype.c \
          ucg_group.h \
          ucg_group.c \
          ucg_request.h \
          ucg_request.c \
          ucg_rte.h \
          ucg_rte.c \
          ucg_topology.h \
          ucg_topology.c \
          ucg_ppool.h \
          ucg_ppool.c \
          ucg_config.h \
          ucg_config.c

noinst_LTLIBRARIES      = libucg_core.la
libucg_core_la_SOURCES  = $(sources)
libucg_core_la_CFLAGS   = $(BASE_CFLAGS)
libucg_core_la_CPPFLAGS = $(BASE_CPPFLAGS)